Bug#52586 Misleading error message on attempt to access a P_S table using a wrong name

Before this fix,
  select * from performance_schema.no_such_table
would fail with ER_TABLEACCESS_DENIED_ERROR,
because the performance schema code automatically
denied SELECT_ACL on performance_schema.*.

With this fix, SELECT_ACL on performance_schema.*
is not premptively rejected,
so that:
  select * from performance_schema.no_such_table
now fails later in the code execution with ER_NO_SUCH_TABLE.
 
The statement still fails, as expected, 
but returning a more detailed error
(that now discloses the information that the table really does not exist)
is better for ease of use.